[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui_elements/ingame/foodwater_bar/Bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui_elements/ingame/foodwater_bar/FoodBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui_elements/ingame/foodwater_bar/WaterBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/ui/GameUI.gd" type="Script" id=4]
[ext_resource path="res://assets/interface/hud/DialogBar.png" type="Texture" id=5]
[ext_resource path="res://fonts/bitmap_font.png" type="Texture" id=6]

[sub_resource type="TileSet" id=1]
0/name = "DialogBar.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 48, 64 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "bitmap_font.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 130, 49 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 5, 7 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="GameUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FoodWaterBar" type="Control" parent="GameUI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 2, 2 )

[node name="MainBar" parent="GameUI/FoodWaterBar" instance=ExtResource( 1 )]

[node name="FoodBar" parent="GameUI/FoodWaterBar" instance=ExtResource( 2 )]

[node name="WaterBar" parent="GameUI/FoodWaterBar" instance=ExtResource( 3 )]
frame = 0

[node name="FilmLines" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="FilmLines"]
anchor_right = 1.0
anchor_bottom = 0.08
color = Color( 0, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="FilmLines"]
anchor_top = 0.92
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Dialog" type="Control" parent="FilmLines"]
anchor_left = 1.0
anchor_top = 0.92
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DialogBorder" type="TileMap" parent="FilmLines/Dialog"]
scale = Vector2( 3, 3 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Text" type="TileMap" parent="FilmLines/Dialog"]
scale = Vector2( 3, 3 )
tile_set = SubResource( 2 )
cell_size = Vector2( 6, 8 )
format = 1
